@@ -25,7 +25,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -344,7 +343,7 @@ class WarningCaseEventHandlerBackwardsCompatibilityTest {
         if (categories != null && categories.getValue() != null) {
             List<String> categoriesToCancel = Stream.of(categories.getValue().split(","))
                 .map(String::trim)
-                .collect(Collectors.toList());
+                .toList();
 
             categoriesToCancel.forEach(category ->
                                            expectedCorrelationKeys.put(
