@@ -31,7 +31,6 @@ import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.singletonList;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -645,7 +644,7 @@ class EventMessageReceiverServiceTest {
         List<ILoggingEvent> logsList = listAppender.list;
         assertTrue(logsList.stream()
             .map(ILoggingEvent::getFormattedMessage)
-            .collect(Collectors.toList())
+            .toList()
             .contains(expectedMessage));
     }
 
@@ -666,15 +665,12 @@ class EventMessageReceiverServiceTest {
     }
 
     private static String messageNoUserAsString() {
-        return "{\n"
-               + "  \"EventInstanceId\" : \"some event instance Id\",\n"
-               + "  \"EventTimeStamp\" : \"2020-12-07T17:39:22.232622\",\n"
-               + "  \"CaseId\" : \"12345\",\n"
-               + "  \"JurisdictionId\" : \"ia\",\n"
-               + "  \"CaseTypeId\" : \"asylum\",\n"
-               + "  \"EventId\" : \"some event Id\",\n"
-               + "  \"NewStateId\" : \"some new state Id\",\n"
-               + "}";
+        return "{EventInstanceId: some event instance Id, "
+            + "EventTimeStamp: 2020-12-07T17:39:22.232622, "
+            + "CaseId: 12345, JurisdictionId: ia, "
+            + "CaseTypeId: asylum, "
+            + "EventId: some event Id, "
+            + "NewStateId: some new state Id}";
     }
 
     private void mockMessageProperties() throws JsonProcessingException {
